@@ -1,5 +1,7 @@
 2009-05-13  higepon  <higepon@users.sourceforge.jp>
 
+        * Ratnum.h : Reduce the memory allocation in aritmetic operations.
+
         * Bignum.h : Reduce the memory allocation in aritmetic operations.
 
 2009-05-12  higepon  <higepon@users.sourceforge.jp>
